--- a/about.html
+++ b/about.html
@@ -7,10 +7,27 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Lato:wght@400;700;900&family=Poppins:ital,wght@0,200;0,400;0,600;1,500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="about.css">
+<link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="about.css">
   <title>Concert Page</title>
 </head>
 <body>
+  <section class="introduction">
+    <div id="overlay">
+      <div id="close-container" onclick="menuClose()">
+        <a id="closer" onclick="menuClose()">
+          <img src="./images/Icon.png" alt="Close" onclick="menuClose()">
+        </a>
+      </div>
+      <div id="menucontainer">
+          <a href="" onclick="menuClose()">Home</a>
+          <a href="" onclick="menuClose()">About</a>
+          <a href="" onclick="menuClose()">Program</a>
+          <a href="" onclick="menuClose()">Join</a>
+          <a href="" onclick="menuClose()">News</a>
+      </div>
+    </div>
   <header class="primary-header">
     <ul id="social-icons">
       <li class="media-icons"><img src="./images/facebook.png" alt=""></li>
@@ -19,17 +36,19 @@
       <li class="media-icons"><img src="./images/linkedin.png" alt=""></li>
     </ul>
   </header>
-  <header class="toolbar">
-    <div id="toolbar-img">
-    <!-- <img src="./images/summer.png" alt="summer concert series"> -->
-    <img src="./images/mobile_menu.png" alt="mobile_menu">
-  </div>
-    <ul>
-      <li class="links"><a href="">Home</a></li>
-      <li class="links"><a href="">About</a></li>
-    </ul>
-  </header>
-  <section class="introduction">
+    <header class="toolbar">
+      <img src="./images/summer.png" alt="" class="summer_img" >
+      <div >
+        <img src='./images/mobile_menu.png' alt="mobile_menu" id="toolbar-img" onclick= menuOpen() >
+      </div>
+      <ul id="link">
+        <li class="links"><a href="index.html">Home</a></li>
+        <li class="links"><a href="">About</a></li>
+        <li class="links"><a href="">Program</a></li>
+        <li class="links"><a href="">Join</a></li>
+        <li class="links"><a href="">News</a></li>
+      </ul>
+    </header>
     <h1>Hello sharing world!</h1>
     <h2>CREATIVE SUMMER CONCERT 2020</h2>
     <P class="primary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
@@ -40,13 +59,15 @@
       Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
       mollit anim id est laborum.</P>
       <p>Please contact us per Email for any further questions about Summer concert series</p>
-      <strong>summerconcert@hotmail.com</strong>
+      <strong id="subscribe">summerconcert@hotmail.com</strong>
   </section>
   <section class="middle">
     <h3>Summer concert series 2020 Logo</h3>
     <p>From its medieval origins to the digital era, 
       learn everything there is to know about the ubiquitous 
-      lorem ipsum passage.</p>
+      lorem ipsum passage.McClintock's eye for detail certainly helped 
+      narrow the whereabouts of lorem ipsum's origin
+    </p>
       <div id="middle-logo">
         <img src="./images/summer.png" alt="" class="summer-logo">
       </div>
@@ -55,6 +76,7 @@
     <strong>See the past summer concert series</strong>
     <p>McClintock's eye for detail certainly helped 
       narrow the whereabouts of lorem ipsum's origin</p>
+    <div id="previous">
     <div class="year1">
       <h2>2018</h2>
       <p>Summer Concert Series at Australia</p>
@@ -63,10 +85,12 @@
       <h2>2020</h2>
       <p>Summer Concert Series at Korea</p>
     </div>
+  </div>
   </section>
   
   <div id="partner">
     <h2 class="partner-title">Partner</h2>
+    <div class="partners">
     <ul id="partner-1">
       <li class="partner "><img src="./images/mozilla.png" alt="" class="partner-img"></li>
       <li class="partner "><img src="./images/googlekorea.png" alt="" class="partner-img"></li>
@@ -78,10 +102,12 @@
         <img src="./images/airbnb.png" alt="" id="airbnb-img" class="partner-img">      </li>
     </ul>
   </div>
+  </div>
   <footer>
     <img src="./images/summer.png" alt="" id="footer-img">
     <p>Copyright &copy; 2022 by Kelvin Benjamin. Part of "Build Responsive
       Real-World Websites with HTML and CSS".</p>
   </footer>
+  <script src="featured-speakers.js"></script>
 </body>
 </html>
