Made changes required

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
   <title>Concert Page</title>
 </head>
 <body>
+  <main class="container">
   <section class="introduction">
     <div id="overlay">
       <div id="close-container" onclick="menuClose()">
@@ -21,8 +22,8 @@
         </a>
       </div>
       <div id="menucontainer">
-          <a href="" onclick="menuClose()">Home</a>
-          <a href="" onclick="menuClose()">About</a>
+          <a href="./index.html" onclick="menuClose()">Home</a>
+          <a href="./about.html" onclick="menuClose()">About</a>
           <a href="" onclick="menuClose()">Program</a>
           <a href="" onclick="menuClose()">Join</a>
           <a href="" onclick="menuClose()">News</a>
@@ -43,10 +44,10 @@
       </div>
       <ul id="link">
         <li class="links"><a href="index.html">Home</a></li>
-        <li class="links"><a href="">About</a></li>
-        <li class="links"><a href="">Program</a></li>
-        <li class="links"><a href="">Join</a></li>
-        <li class="links"><a href="">News</a></li>
+        <li class="links"><a href="#">About</a></li>
+        <li class="links"><a href="#">Program</a></li>
+        <li class="links"><a href="#">Join</a></li>
+        <li class="links"><a href="#">News</a></li>
       </ul>
     </header>
     <h1>Hello sharing world!</h1>
@@ -108,6 +109,7 @@
     <p>Copyright &copy; 2022 by Kelvin Benjamin. Part of "Build Responsive
       Real-World Websites with HTML and CSS".</p>
   </footer>
+</main>
   <script src="featured-speakers.js"></script>
 </body>
 </html>
