--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       </a>
     </div>
     <div id="menucontainer">
-        <a href="" onclick="menuClose()">Home</a>
-        <a href="" onclick="menuClose()">About</a>
+        <a href="./index.html" onclick="menuClose()">Home</a>
+        <a href="./about.html" onclick="menuClose()">About</a>
         <a href="" onclick="menuClose()">Program</a>
         <a href="" onclick="menuClose()">Join</a>
         <a href="" onclick="menuClose()">News</a>
@@ -40,11 +40,11 @@
       <img src='./images/mobile_menu.png' alt="mobile_menu" id="toolbar-img" onclick= menuOpen() >
     </div>
     <ul id="link">
-      <li class="links"><a href="">Home</a></li>
+      <li class="links"><a href="./index.html">Home</a></li>
       <li class="links"><a href="about.html">About</a></li>
-      <li class="links"><a href="">Program</a></li>
-      <li class="links"><a href="">Join</a></li>
-      <li class="links"><a href="">News</a></li>
+      <li class="links"><a href="#">Program</a></li>
+      <li class="links"><a href="#">Join</a></li>
+      <li class="links"><a href="#">News</a></li>
     </ul>
   </header>
   <section >
