Create another section of the header

--- a/index.html
+++ b/index.html
@@ -44,17 +44,48 @@
               </a>
             </li>
             <li class="navigation__list">
-              <a href="#" class="navigation__link pages">Logout</a>
+              <a href="#" class="navigation__link">Logout</a>
             </li>
             <li class="navigation__list">
-              <a href="#" class="navigation__link pages">Mypage</a>
+              <a href="#" class="navigation__link">Mypage</a>
             </li>
             <li class="navigation__list">
-              <a href="#" class="navigation__link pages">Korean</a>
+              <a href="#" class="navigation__link">Korean</a>
             </li>
           </ul>
         </div>
       </nav>
+      <div class="navigation__bottom">
+        <div class="bottom">
+          <img
+            src="images/Ccsummit2015_logo.png"
+            alt="cc global summit logo"
+            class="navigation__logo"
+          />
+          <div class="pages">
+            <ul class="pages__items">
+              <li class="pages__list">
+                <a href="#" class="pages__link first">About</a>
+              </li>
+              <li class="pages__list">
+                <a href="#" class="pages__link">Program</a>
+              </li>
+              <li class="pages__list">
+                <a href="#" class="pages__link">Join</a>
+              </li>
+              <li class="pages__list">
+                <a href="#" class="pages__link">Sponsor</a>
+              </li>
+              <li class="pages__list">
+                <a href="#" class="pages__link">News</a>
+              </li>
+              <li class="pages__list last">
+                <a href="#" class="pages__link">CC Campaign</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
