--- a/index.html
+++ b/index.html
@@ -87,5 +87,26 @@
         </div>
       </div>
     </header>
+    <main class="container">
+      <section class="hero">
+        <div class="hero__intro">
+          <h1 class="primary-heading">"Hello! Sharing world"</h1>
+          <h2 class="secondary-heading hero__heading">
+            creative commons global summit 2015
+          </h2>
+          <p class="hero__text">
+            A joyful celebration believing in the value of openness and sharing,
+            creating a positive change with people from over 89 countries is
+            taking place in October, in Korea.
+          </p>
+          <div class="date">
+            <h3 class="sub-heading">2015.10.15(THU) ~ 16(FRI)</h3>
+            <p class="date__text">
+              @ National Museum of Korea, Art Center Nabi and more
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
