Create a section with html elements to represent prgrams

--- a/index.html
+++ b/index.html
@@ -107,6 +107,64 @@
           </div>
         </div>
       </section>
+      <section class="program">
+        <h3 class="sub-heading program__heading">main program</h3>
+        <div id="items">
+          <ul class="items">
+            <li class="programs__list">
+              <img src="images/conference.png" alt="lecture" />
+              <span class="programs__details">
+                <h3>Lecture</h3>
+                <p class="programs__description">
+                  Listen to speakers from various countrues about the messeges
+                  of sharing and opening.
+                </p>
+              </span>
+            </li>
+            <li class="programs__list">
+              <img src="images/exhibition.png" alt="exhibition" />
+              <span class="programs__details">
+                <h3>CC Exehibition</h3>
+                <p class="programs__description">
+                  Appreciate various creations applying CC license of artists,
+                  organized from Art Centre Nabi.
+                </p>
+              </span>
+            </li>
+            <li class="programs__list">
+              <img src="images/forum.png" alt="Forum" />
+              <span class="programs__details">
+                <h3>Forum</h3>
+                <p class="programs__description">
+                  Have the time to share your thoughts and opinions with experts
+                  for each topic.
+                </p>
+              </span>
+            </li>
+            <li class="programs__list">
+              <img src="images/workshop.png" alt="workshop" />
+              <span class="programs__details">
+                <h3>Workshop</h3>
+                <p class="programs__description">
+                  Try creating your own work using open source license rather
+                  than just watching at it.
+                </p>
+              </span>
+            </li>
+            <li class="programs__list">
+              <img src="images/ignite.png" alt="ignite" />
+              <span class="programs__details">
+                <h3>CC Ignite</h3>
+                <p class="programs__description">
+                  Get opportunities to network with CC affiliates around the
+                  world, also after the summit.
+                </p>
+              </span>
+            </li>
+          </ul>
+          <a href="#" class="programs__link">see the whole program</a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
