Create speaker article

--- a/index.html
+++ b/index.html
@@ -165,6 +165,138 @@
           <a href="#" class="programs__link">see the whole program</a>
         </div>
       </section>
+      <article class="guest-speakers">
+        <h3 class="sub-heading speaker-heading">featured speakers</h3>
+        <div class="speakers">
+          <ul class="speakers__list">
+            <li class="speakers__detail">
+              <img
+                src="images/speaker_01.png"
+                alt="Photo of Yochai"
+                class="speakers__photo"
+              />
+              <span class="more-info">
+                <h4 class="speaker-name">yochai benkler</h4>
+                <h5 class="speaker-profession">
+                  Berkman Professor of Entrepreneurial Legal Studies at Harvard
+                  Law School
+                </h5>
+                <p class="more-about">
+                  Benkler Studies commons-based peer production, and published
+                  his seminal book. The Wealth of NetWorks in 2006
+                </p>
+              </span>
+            </li>
+            <li class="speakers__detail">
+              <img
+                src="/images/speaker_02.png"
+                alt="photo of Kilnam Chon"
+                class="speakers__photo"
+              />
+              <span class="more-info">
+                <h4 class="speaker-name">kilnam chon</h4>
+                <h5 class="speaker-profession"></h5>
+                <p class="more-about">
+                  Kilnam Chon helped bring the Internet to Asia and is an
+                  outspokeb advccate for open web digital commons. In 2012, he
+                  was inducted into te inaugural class of the Internet Society's
+                  (ISOC) Internet Hall of Fame.
+                </p>
+              </span>
+            </li>
+            <li class="speakers__detail">
+              <img
+                src="images/speaker_03.png"
+                alt="photo of SohYeong Noh"
+                class="speakers__photo"
+              />
+              <span class="more-info">
+                <h4 class="speaker-name">SohYeong Noh</h4>
+                <h5 class="speaker-profession">
+                  Director of Art Center Nabi and a board member of CC Korea
+                </h5>
+                <p class="more-about">
+                  As the main venue of new media art production in Korea, Nabi
+                  promotes cross-disciplinary collaboration and understanding
+                  among science technology, humanities, and the arts.
+                </p>
+              </span>
+            </li>
+            <li class="speakers__detail">
+              <img
+                src="images/speaker_04.png"
+                alt="photo of Julia Leda"
+                class="speakers__photo"
+              />
+              <span class="more-info">
+                <h4 class="speaker-name">julia leda</h4>
+                <h5 class="speaker-profession">
+                  President of Young Pirates of Europe
+                </h5>
+                <p class="more-about">
+                  European ingetration, political democracy and participation of
+                  youth through online as her major condem, Reda's report
+                  outlining potential changes to EU copyright law was approved
+                  by the parliament in july.
+                </p>
+              </span>
+            </li>
+            <li class="speakers__detail">
+              <img
+                src="images/speaker_05.png"
+                alt="photo of Lila Tretikov"
+                class="speakers__photo"
+              />
+              <span class="more-info">
+                <h4 class="speaker-name">lila tretikov</h4>
+                <h5 class="speaker-profession">
+                  Executive director of Wikimedia Foundation
+                </h5>
+                <p class="more-about">
+                  Lila Tretikov is the Executive Director of the wikimedia
+                  Foundation, the nonprofit organization that operates
+                  Wikipedia. Wikipedia is freely available in 290 languages and
+                  used by nearly half a bilion peopke around the world every
+                  month.
+                </p>
+              </span>
+            </li>
+            <li class="speakers__detail">
+              <img
+                src="images/speaker_06.png"
+                alt="photo of Ryan Merkley"
+                class="speakers__photo"
+              />
+              <span class="more-info">
+                <h4 class="speaker-name">ryan merkley</h4>
+                <h5 class="speaker-profession">
+                  CEO of Creative Commons, ex COO of the Mozilla Foundation
+                </h5>
+                <p class="more-about">
+                  Ryan has been leading open-source projects at the Mozilla
+                  Foundation such as the open source movement.
+                </p>
+              </span>
+            </li>
+            <!-- <li class="speakers__detail">
+              <img src="" alt="" />
+              <span class="more-info">
+                <h4 class="speaker-name"></h4>
+                <h5 class="speaker-profession"></h5>
+                <p class="more-about"></p>
+              </span>
+            </li>
+            <li class="speakers__detail">
+              <img src="" alt="" />
+              <span class="more-info">
+                <h4 class="speaker-name"></h4>
+                <h5 class="speaker-profession"></h5>
+                <p class="more-about"></p>
+              </span>
+            </li> -->
+          </ul>
+        </div>
+      </article>
     </main>
   </body>
 </html>
