Implment program and featured speakers section with dynamic html

--- a/about.html
+++ b/about.html
@@ -124,13 +124,13 @@
           won the prize. After consultation with Mr. Agrawal we optimized the
           prize-winnign-logo for this year's summit as following:
         </p>
-        <img src="images/Ccsummit2015_logo.png" alt="" class="logo__summit"/>
+        <img src="images/Ccsummit2015_logo.png" alt="" class="logo__summit" />
       </div>
       <div class="past-summits">
         <h4 class="past-summits__heading">See the past CC Global Summits</h4>
         <p>
-          Take a loook at the last two CC Global Summits which took place in Buenos
-          Aires and in Warsaw.
+          Take a loook at the last two CC Global Summits which took place in
+          Buenos Aires and in Warsaw.
         </p>
         <div class="past-summits__images">
           <div class="image-container">
