--- a/index.html
+++ b/index.html
@@ -110,191 +110,14 @@
       <section class="program">
         <h3 class="sub-heading program__heading">main program</h3>
         <div id="items">
-          <ul class="items">
-            <li class="programs__list">
-              <img src="images/conference.png" alt="lecture" />
-              <span class="programs__details">
-                <h3>Lecture</h3>
-                <p class="programs__description">
-                  Listen to speakers from various countrues about the messeges
-                  of sharing and opening.
-                </p>
-              </span>
-            </li>
-            <li class="programs__list">
-              <img src="images/exhibition.png" alt="exhibition" />
-              <span class="programs__details">
-                <h3>CC Exehibition</h3>
-                <p class="programs__description">
-                  Appreciate various creations applying CC license of artists,
-                  organized from Art Centre Nabi.
-                </p>
-              </span>
-            </li>
-            <li class="programs__list">
-              <img src="images/forum.png" alt="Forum" />
-              <span class="programs__details">
-                <h3>Forum</h3>
-                <p class="programs__description">
-                  Have the time to share your thoughts and opinions with experts
-                  for each topic.
-                </p>
-              </span>
-            </li>
-            <li class="programs__list">
-              <img src="images/workshop.png" alt="workshop" />
-              <span class="programs__details">
-                <h3>Workshop</h3>
-                <p class="programs__description">
-                  Try creating your own work using open source license rather
-                  than just watching at it.
-                </p>
-              </span>
-            </li>
-            <li class="programs__list">
-              <img src="images/ignite.png" alt="ignite" />
-              <span class="programs__details">
-                <h3>CC Ignite</h3>
-                <p class="programs__description">
-                  Get opportunities to network with CC affiliates around the
-                  world, also after the summit.
-                </p>
-              </span>
-            </li>
-          </ul>
+          <ul class="items"></ul>
           <a href="#" class="programs__link">see the whole program</a>
         </div>
       </section>
       <article class="guest-speakers">
         <h3 class="sub-heading speaker-heading">featured speakers</h3>
         <div class="speakers">
-          <ul class="speakers__list">
-            <li class="speakers__detail">
-              <img
-                src="images/speaker_01.png"
-                alt="Photo of Yochai"
-                class="speakers__photo"
-              />
-              <span class="more-info">
-                <h4 class="speaker-name">yochai benkler</h4>
-                <h5 class="speaker-profession">
-                  Berkman Professor of Entrepreneurial Legal Studies at Harvard
-                  Law School
-                </h5>
-                <p class="more-about">
-                  Benkler Studies commons-based peer production, and published
-                  his seminal book. The Wealth of NetWorks in 2006
-                </p>
-              </span>
-            </li>
-            <li class="speakers__detail">
-              <img
-                src="/images/speaker_02.png"
-                alt="photo of Kilnam Chon"
-                class="speakers__photo"
-              />
-              <span class="more-info">
-                <h4 class="speaker-name">kilnam chon</h4>
-                <h5 class="speaker-profession"></h5>
-                <p class="more-about">
-                  Kilnam Chon helped bring the Internet to Asia and is an
-                  outspokeb advccate for open web digital commons. In 2012, he
-                  was inducted into te inaugural class of the Internet Society's
-                  (ISOC) Internet Hall of Fame.
-                </p>
-              </span>
-            </li>
-            <li class="speakers__detail">
-              <img
-                src="images/speaker_03.png"
-                alt="photo of SohYeong Noh"
-                class="speakers__photo"
-              />
-              <span class="more-info">
-                <h4 class="speaker-name">SohYeong Noh</h4>
-                <h5 class="speaker-profession">
-                  Director of Art Center Nabi and a board member of CC Korea
-                </h5>
-                <p class="more-about">
-                  As the main venue of new media art production in Korea, Nabi
-                  promotes cross-disciplinary collaboration and understanding
-                  among science technology, humanities, and the arts.
-                </p>
-              </span>
-            </li>
-            <li class="speakers__detail">
-              <img
-                src="images/speaker_04.png"
-                alt="photo of Julia Leda"
-                class="speakers__photo"
-              />
-              <span class="more-info">
-                <h4 class="speaker-name">julia leda</h4>
-                <h5 class="speaker-profession">
-                  President of Young Pirates of Europe
-                </h5>
-                <p class="more-about">
-                  European ingetration, political democracy and participation of
-                  youth through online as her major condem, Reda's report
-                  outlining potential changes to EU copyright law was approved
-                  by the parliament in july.
-                </p>
-              </span>
-            </li>
-            <li class="speakers__detail">
-              <img
-                src="images/speaker_05.png"
-                alt="photo of Lila Tretikov"
-                class="speakers__photo"
-              />
-              <span class="more-info">
-                <h4 class="speaker-name">lila tretikov</h4>
-                <h5 class="speaker-profession">
-                  Executive director of Wikimedia Foundation
-                </h5>
-                <p class="more-about">
-                  Lila Tretikov is the Executive Director of the wikimedia
-                  Foundation, the nonprofit organization that operates
-                  Wikipedia. Wikipedia is freely available in 290 languages and
-                  used by nearly half a bilion peopke around the world every
-                  month.
-                </p>
-              </span>
-            </li>
-            <li class="speakers__detail">
-              <img
-                src="images/speaker_06.png"
-                alt="photo of Ryan Merkley"
-                class="speakers__photo"
-              />
-              <span class="more-info">
-                <h4 class="speaker-name">ryan merkley</h4>
-                <h5 class="speaker-profession">
-                  CEO of Creative Commons, ex COO of the Mozilla Foundation
-                </h5>
-                <p class="more-about">
-                  Ryan has been leading open-source projects at the Mozilla
-                  Foundation such as the open source movement.
-                </p>
-              </span>
-            </li>
-            <!-- <li class="speakers__detail">
-              <img src="" alt="" />
-              <span class="more-info">
-                <h4 class="speaker-name"></h4>
-                <h5 class="speaker-profession"></h5>
-                <p class="more-about"></p>
-              </span>
-            </li>
-            <li class="speakers__detail">
-              <img src="" alt="" />
-              <span class="more-info">
-                <h4 class="speaker-name"></h4>
-                <h5 class="speaker-profession"></h5>
-                <p class="more-about"></p>
-              </span>
-            </li> -->
-          </ul>
+          <ul class="speakers__list"></ul>
         </div>
       </article>
       <footer class="footer-section">
@@ -335,13 +158,21 @@
           </ul>
         </div>
         <div class="footer-bottom">
-          <img src="images/logo.png" alt="logo of CC Korea" class="korea-logo">
+          <img
+            src="images/logo.png"
+            alt="logo of CC Korea"
+            class="korea-logo"
+          />
           <span class="rights">
             <h5>2015 Creative Commons Korea. Some Rights Reserved.</h5>
-            <h5>크리에이티브 커먼즈 코리아. 일부 권리 보유.2015 크리에이티브 커먼즈 코리아. 일부 권리 보유.</h5>
+            <h5>
+              크리에이티브 커먼즈 코리아. 일부 권리 보유.2015 크리에이티브
+              커먼즈 코리아. 일부 권리 보유.
+            </h5>
           </span>
         </div>
       </footer>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
